--- a/.gitignore
+++ b/.gitignore
@@ -100,11 +100,14 @@ web_modules/
 
 # dotenv environment variable files
 
+# Local env files
 .env
+.env.*
 .env.development.local
 .env.test.local
 .env.production.local
 .env.local
+!.env.example
 
 # parcel-bundler cache (https://parceljs.org/)
 
@@ -173,3 +176,23 @@ dist
 
 # Finder (MacOS) folder config
 .DS_Store
+
+# Nuxt dev/build outputs
+.output
+.data
+.nuxt
+.nitro
+.cache
+dist
+
+# Logs
+logs
+*.log
+
+# Misc
+.DS_Store
+.fleet
+.idea
+
+
+
