--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "scripts": {
     "dev": "concurrently --kill-others \"bun run dev:api\" \"bun run dev:app\"",
     "dev:api": "cd packages/api && bun dev",
-    "dev:app": "cd packages/app && bun dev"
+    "dev:app": "cd packages/app && bun dev",
+    "lint": "eslint packages --ext .ts,.vue --max-warnings=0"
   },
   "workspaces": [
     "packages/*"
   ],
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "concurrently": "^8.2.2",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5"
   }
 }
